k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ponto-eletronico-api
  labels:
    app: ponto-eletronico-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ponto-eletronico-api
  template:
    metadata:
      labels:
        app: ponto-eletronico-api
    spec:
      containers:
        - name: api
          image: clockintech/ponto-eletronico-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "768Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            periodSeconds: 10
