k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ponto-eletronico-api
  labels:
    app: ponto-eletronico-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8081
      protocol: TCP
  selector:
    app: ponto-eletronico-api
