k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ponto-eletronico-api
  labels:
    app: ponto-eletronico-api
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: api.criptoai.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ponto-eletronico-api
                port:
                  number: 80
